--- a/IFoodAPI/IFoodAPI.csproj
+++ b/IFoodAPI/IFoodAPI.csproj
@@ -50,10 +50,14 @@
     <Compile Include="EventService.cs" />
     <Compile Include="Exceptions\RequestException.cs" />
     <Compile Include="Exceptions\NotFoundException.cs" />
+    <Compile Include="CategoryService.cs" />
+    <Compile Include="IFoodAPIService.cs" />
+    <Compile Include="MerchantService.cs" />
     <Compile Include="Models\Address.cs" />
     <Compile Include="Models\Benefit.cs" />
+    <Compile Include="Models\Category.cs" />
+    <Compile Include="Models\Config.cs" />
     <Compile Include="Models\Coordinates.cs" />
-    <Compile Include="Models\Credentials.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\DeliveryAddress.cs" />
     <Compile Include="Models\DeliveryMethod.cs" />
@@ -68,8 +72,10 @@
     <Compile Include="Models\SponsorshipValues.cs" />
     <Compile Include="Models\Token.cs" />
     <Compile Include="Models\Tracking.cs" />
+    <Compile Include="Models\Unavailability.cs" />
     <Compile Include="OrderService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RestaurantService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
